-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0, 5.9.1
-
None
-
KDE Neon developer unstable edition.
When using KDevelop on a Plasma/Wayland session I'm constantly experiencing crashes when doing code completion. The crash is triggered in QtWayland.
Application: KDevelop (kdevelop), signal: Aborted Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1". [Current thread is 1 (Thread 0x7f92de635900 (LWP 21626))] Thread 1 (Thread 0x7f92de635900 (LWP 21626)): [KCrash Handler] #6 0x00007f92faf2e428 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54 #7 0x00007f92faf3002a in __GI_abort () at abort.c:89 #8 0x00007f92ddc2a9ff in ?? () #9 0x00007f92ddc26c05 in wl_proxy_marshal_array_constructor_versioned () from /usr/lib/x86_64-linux-gnu/libwayland-client.so.0 #10 0x00007f92ddc26d1c in wl_proxy_marshal () from /usr/lib/x86_64-linux-gnu/libwayland-client.so.0 #11 0x00007f92ddeacda3 in zwp_text_input_v2_enable (surface=<optimized out>, zwp_text_input_v2=<optimized out>) at ../../include/QtWaylandClient/5.9.0/QtWaylandClient/private/wayland-text-input-unstable-v2-client-protocol.h:748 #12 QtWayland::zwp_text_input_v2::enable (this=<optimized out>, surface=<optimized out>) at qwayland-text-input-unstable-v2.cpp:59 #13 0x00007f92ddea09c1 in QtWaylandClient::QWaylandInputContext::setFocusObject (this=0x6a7750) at qwaylandinputcontext.cpp:544 #14 0x00007f92fbcb7f71 in QGuiApplicationPrivate::_q_updateFocusObject (this=<optimized out>, object=0x1dc9be0) at kernel/qguiapplication.cpp:3745 #15 0x00007f92fbcb82e8 in QGuiApplicationPrivate::processActivatedEvent (e=<optimized out>) at kernel/qguiapplication.cpp:2166 #16 0x00007f92fbcb85fd in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x5fb2810) at kernel/qguiapplication.cpp:1741 #17 0x00007f92fbc92ceb in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:938 #18 0x00007f92ddec07f0 in userEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/x86_64-linux-gnu/libQt5WaylandClient.so.5 #19 0x00007f92f2c4d197 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #20 0x00007f92f2c4d3f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #21 0x00007f92f2c4d49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #22 0x00007f92fb914abf in QEventDispatcherGlib::processEvents (this=0x71e890, flags=...) at kernel/qeventdispatcher_glib.cpp:423 #23 0x00007f92fb8be30a in QEventLoop::exec (this=this@entry=0x7fff2fd399c0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212 #24 0x00007f92fb8c6db4 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1291 #25 0x000000000040bb6f in ?? () #26 0x00007f92faf19830 in __libc_start_main (main=0x405e70, argc=3, argv=0x7fff2fd39e28, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff2fd39e18) at ../csu/libc-start.c:291 #27 0x000000000040c6f9 in _start ()
If needed I can run kdevelop through WAYLAND_DEBUG env variable as it's fairly simple to reproduce
For Gerrit Dashboard: QTBUG-61704 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
200136,3 | Check surface exists when setting textinput focus | 5.9 | qt/qtwayland | Status: MERGED | +2 | 0 |